--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
       if (password === "") {
         error.textContent = "password";
       } else if (password === "password1") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password2") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password3") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password4") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password5") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password6") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password7") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else if (password === "password") {
-        window.open("audioplayer.html", "_blank");
+        window.open("blog.html", "_blank");
       } else {
         error.textContent = "Requested page doesn't exist.";
       }
