--- a/blog.html
+++ b/blog.html
@@ -15,10 +15,11 @@
           Until Today when the management added a signle piece that fixed the stall.</p>
       </div>
       <div class="card">
-        <h2>TITLE HEADING</h2>
-        <h5>Title description, Sep 2, 2017</h5>
+        <h2>NEW TOILET STALL HAS BEEN RIGGED ALREADY!</h2></h2>
+        <h5>Person locks new bathroom stall., Sep 2, 2017</h5>
         <div class="fakeimg" style="height:200px;">Image</div>
-        <p>Some text..</p>
+        <p>After the miraculous event of lock being put onto stall. it has already been rigged.
+            A person decided to lock it from the inside so none can use it. We asked someone to unlock it.</p>
       </div>
     </div>
     <div class="rightcolumn">
