--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,19 @@
     <h2>Blog Name</h2>
   </div>
  <link rel="stylesheet" href="style.css">
+  <div class="row">
+    <div class="leftcolumn">
+      <div class="card">
+        <h2>TOILETS STALL NOW HAS LOCK!</h2>
+        <h5>Second toilet stall now has lock., Dec 26, 2023</h5>
+        <img src="IMG_0432.png"
+<p>Hi Welcome to here. 
+          coolness.</p>
+      </div>
 
+    
+  
+            
     <div class="row">
     <div class="leftcolumn">
       <div class="card">
