--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
       <div class="card">
         <h2>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING</h2>
         <h5>Recently a person requested that a site shall be allowed, Dec 27, 2023</h5>
-        <img src="IMG_0432.png" alt="">
+        <img src="https://photos.app.goo.gl/g69RVsuh2FJraXCeA" alt="">
         <p>over the past week, a teacher has requested that a popular digital design platform should be allowed on school ipads.
         RIM, the one in charge of the ipads said he needs to think about it.Time and time again that week, The teacher kept on asking.
         A person asked on thursday if we were getting the software, And sure enough, The teacher said he still hasn't gotten a answer.
