--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       if (password === "") {
         error.textContent = "password";
-      } else if (password === "richard") {
+      } else if (password === "password1") {
         window.open("blog.html", "_blank");
       } else if (password === "password2") {
         window.open("blog.html", "_blank");
