--- a/blog.html
+++ b/blog.html
@@ -83,6 +83,25 @@ body {
   <h2>News blog</h2>
 </div>
 <div class="card">
+  <h2>Its winter break!</h2>
+  <h5>Its winter break, how are YOU spending it?, Dec 27, 2023</h5>
+  <div class="fakeimg" style="height:200px;">Updates</div>
+  <p>Winter Break update</p>
+  <p>Its winter break, a break from school. Some like it some hate it. Multiple questions arise as it happens. 
+    No annoying people for almost a week.
+.</p>
+</div>
+
+
+
+
+
+
+
+
+
+  
+<div class="card">
   <h2>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING</h2>
   <h5>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING, Dec 27, 2023</h5>
   <div class="fakeimg" style="height:200px;">BREAKING NEWS!!!!</div>
