--- a/blog.html
+++ b/blog.html
@@ -137,8 +137,10 @@ body {
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <div class="fakeimg">its been locked!</div><br>
-      <div class="fakeimg">Bathroom stall</div><br>
+      <div class="fakeimg"><a href="blog.html">Winter break</a>
+</div><br>
+      <div class="fakeimg"><a href="blog.html">Stall now has lock!</a>
+</div><br>
       <div class="fakeimg">Welcome</div>
     </div>
     <div class="card">
