--- a/blog.html
+++ b/blog.html
@@ -144,7 +144,8 @@ body {
       <div class="fakeimg">Welcome</div>
     </div>
     <div class="card">
-      <h3>Follow Me</h3>
+      <h3><a href="README.md">View README </a>
+</h3>
       <p>Some text..</p>
     </div>
   </div>
