--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 var password;
 var richard="techgeekshan";
 
-password=prompt('Please enter your password to view this page!',' ');
+password=prompt('Welcome. Please Enter password to access.',' ');
 
 if (password==richard)
   alert('Password Correct! Click OK to enter!');
