--- a/blog.html
+++ b/blog.html
@@ -135,7 +135,7 @@ body {
       <h3>Popular Post</h3>
       <div class="fakeimg"><a href="blog.html">Winter break</a>
 </div><br>
-      <div class="fakeimg"><a href="blog.html">Stall now has lock!</a>
+      <div class="fakeimg"><a href="#TOILETS STALL NOW HAS LOCK!">Stall now has lock!</a>
 </div><br>
       <div class="fakeimg">Welcome</div>
     </div>
