--- a/blog.html
+++ b/blog.html
@@ -133,7 +133,7 @@ body {
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <div class="fakeimg"><a href="blog.html">Winter break</a>
+      <div class="fakeimg"><a href="#Its winter break!">Winter break</a>
 </div><br>
       <div class="fakeimg"><a href="#TOILETS STALL NOW HAS LOCK!">Stall now has lock!</a>
 </div><br>
