--- a/blog.html
+++ b/blog.html
@@ -82,13 +82,6 @@ body {
 <div class="header">
   <h2>News blog</h2>
 </div>
-
-
-
-
-
-
-  
 <div class="card">
   <h2>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING</h2>
   <h5>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING, Dec 27, 2023</h5>
@@ -125,15 +118,12 @@ body {
     </div>
     <div class="card">
       <h3>Popular Post</h3>
-      <div class="fakeimg"><a href="#Its winter break!">Winter break</a>
-</div><br>
-      <div class="fakeimg"><a href="#TOILETS STALL NOW HAS LOCK!">Stall now has lock!</a>
-</div><br>
+      <div class="fakeimg">its been locked!</div><br>
+      <div class="fakeimg">Bathroom stall</div><br>
       <div class="fakeimg">Welcome</div>
     </div>
     <div class="card">
-      <h3><a href="README.md">View README </a>
-</h3>
+      <h3>Follow Me</h3>
       <p>Some text..</p>
     </div>
   </div>
