--- a/submitarticle.html
+++ b/submitarticle.html
@@ -65,7 +65,7 @@ input[type=submit] {
   }
 }--->
 <div class="container">
-    <form netlify action="action_page.php">
+    <form name="contact" netlify>
       <div class="row">
         <div class="col-25">
           <label for="fname">First Name</label>
