--- a/blog.html
+++ b/blog.html
@@ -123,8 +123,11 @@ body {
       <div class="fakeimg">Welcome</div>
     </div>
     <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
+      <h3>Submit article</h3>
+        <button style="background-color: green; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;" onclick="window.location.href='submitarticle.html'">
+          Submit Article
+        </button>
+        
     </div>
   </div>
 </div>
