--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <!--hide
 
 var password;
-var richard="techgeekshan";
+var chardie="techgeekshan";
 
 password=prompt('Please enter your password to view this page!',' ');
 
-if (password==richard)
+if (password==chardie)
   alert('Password Correct! Click OK to enter!');
 else
    {
