--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    while (testV < 3) {
    if (!pass1)
    history.go(-1);
-   if (pass1.toLowerCase() == "richard") {
+   if (pass1.toLowerCase() == "dingus") {
    window.open('blog.html');
    break;
    }
