--- a/blog.html
+++ b/blog.html
@@ -82,6 +82,28 @@ body {
 <div class="header">
   <h2>News blog</h2>
 </div>
+
+
+
+
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>SUPPLY LIST WITH TEHILLIM INVESTIGATION!</h2>
+      <h5> A issue with the school supply list., Dec 26, 2023
+      </h5>
+      <div class="fakeimg" style="height:200px;">INVESTIGATION</div>
+      <p>MYSTERY TO BE SOLVED</p>
+      <p>On the supply list it says to bring "a siddur with tehillim for daily use"This is a misleading part of the list. After davening, a person 
+      was saying tehillim after the group finished davening. The one in charge of davening said we needed to go to class. as i said, the supply list said "for 
+      daily use" daily use is usualy right after davening.</p>
+    </div>
+    
+
+
+
+  
 <div class="card">
   <h2>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING</h2>
   <h5>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING, Dec 27, 2023</h5>
