--- a/blog.html
+++ b/blog.html
@@ -134,6 +134,31 @@ body {
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
   </div>
+
+  <div class="rightcolumn">
+    <div class="card">
+      <h2>About Me</h2>
+      <div class="fakeimg" style="height:100px;">Image</div>
+      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
+    </div>
+    <div class="card">
+      <h3>Popular Post</h3>
+      <div class="fakeimg">its been locked!</div><br>
+      <div class="fakeimg">Bathroom stall</div><br>
+      <div class="fakeimg">Welcome</div>
+    </div>
+    <div class="card">
+      <h3>Submit article</h3>
+        <button style="background-color: green; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;" onclick="window.location.href='submitarticle.html'">
+          Submit Article
+        </button>
+        
+    </div>
+  </div>
+</div>
+
+
+  
   <div class="rightcolumn">
     <div class="card">
       <h2>About Me</h2>
