--- a/blog.html
+++ b/blog.html
@@ -1,168 +1,76 @@
-
 <!DOCTYPE html>
-<html>
-
-<link rel="stylesheet" href="style.css">
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {
-  box-sizing: border-box;
-}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Blog</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
 
-/* Add a gray background color with some padding */
-body {
-  font-family: Arial;
-  padding: 20px;
-  background: #f1f1f1;
-}
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
 
-/* Header/Blog Title */
-.header {
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
-}
+        nav {
+            background-color: #444;
+            color: #fff;
+            padding: 10px;
+            text-align: center;
+        }
 
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
-}
+        section {
+            margin: 20px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 5px;
+        }
 
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
-}
-
-/* Fake image */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
-}
-
-/* Add a card effect for articles */
-.card {
-   background-color: white;
-   padding: 20px;
-   margin-top: 20px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Footer */
-.footer {
-  padding: 20px;
-  text-align: center;
-  background: #ddd;
-  margin-top: 20px;
-}
-
-/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 800px) {
-  .leftcolumn, .rightcolumn {   
-    width: 100%;
-    padding: 0;
-  }
-}
-</style>
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
 
-<div class="header">
-  <h2>News blog</h2>
-</div>
+    <header>
+        <h1>My Blog</h1>
+    </header>
 
+    <nav>
+        <a href="#">Home</a> |
+        <a href="#">About</a> |
+        <a href="#">Contact</a>
+    </nav>
 
+    <section>
+        <article>
+            <h2>Blog Post Title</h2>
+            <p>Here is the content of the blog post. It can be as long as you want.</p>
+        </article>
 
+        <article>
+            <h2>Another Blog Post</h2>
+            <p>This is another interesting blog post. Feel free to add more articles.</p>
+        </article>
+    </section>
 
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>SUPPLY LIST WITH TEHILLIM INVESTIGATION!</h2>
-      <h5> A issue with the school supply list., Dec 26, 2023
-      </h5>
-      <div class="fakeimg" style="height:200px;">INVESTIGATION</div>
-      <p>MYSTERY TO BE SOLVED</p>
-      <p>On the supply list it says to bring "a siddur with tehillim for daily use"This is a misleading part of the list. After davening, a person 
-      was saying tehillim after the group finished davening. The one in charge of davening said we needed to go to class. as i said, the supply list said "for 
-      daily use" daily use is usualy right after davening.</p>
-    </div>
-    
-
-
-
-  
-<div class="card">
-  <h2>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING</h2>
-  <h5>RIM KEEPS PUSHING OFF DIGITAL DESIGN APPLICATION ALLOWING, Dec 27, 2023</h5>
-  <div class="fakeimg" style="height:200px;">BREAKING NEWS!!!!</div>
-  <p>Some text..</p>
-  <p>over the past week, a teacher has requested that a popular digital design platform should be allowed on school ipads. RIM, the one in charge of the ipads said he needs to think about it.Time and time again that week, The teacher kept on asking. A person asked on thursday if we were getting the software, And sure enough,
-    The teacher said he still hasn't gotten a answer. This makes no sense since the group ahead of this group has this software.</p>
-</div>
-</div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>TOILETS STALL NOW HAS LOCK!</h2>
-      <h5> Second toilet stall now has lock., Dec 26, 2023
-      </h5>
-      <div class="fakeimg" style="height:200px;">BREAKING NEWS!!!!</div>
-      <p>As some may know.</p>
-      <p>As some may know.. Our yeshiva had a toilet stall that didn't lock. Until Today when the management added a signle piece that fixed the stall.</p>
-    </div>
-    <div class="card">
-      <h2>Welcome</h2>
-      <h5>Welcome to my news site., Sep 2, 2023</h5>
-      <div class="fakeimg" style="height:200px;">BREAKING NEWS!!!!</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
-  </div>
-
-  
-
-  
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-      <h3>Popular Post</h3>
-      <div class="fakeimg">its been locked!</div><br>
-      <div class="fakeimg">Bathroom stall</div><br>
-      <div class="fakeimg">Welcome</div>
-    </div>
-    <div class="card">
-      <h3>Submit article</h3>
-        <button style="background-color: green; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;" onclick="window.location.href='submitarticle.html'">
-          Submit Article
-        </button>
-        
-    </div>
-  </div>
-</div>
-
-<div class="footer">
-  <h2>Footer</h2>
-</div>
+    <footer>
+        &copy; 2023 My Blog. All rights reserved.
+    </footer>
 
 </body>
 </html>
