--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
 
     <section>
         <article>
-            <h2>Blog Post Title</h2>
+            <h2>Good morning,</h2>
             <p>Here is the content of the blog post. It can be as long as you want.</p>
         </article>
 
