--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
-<SCRIPT>
-   function passWord() {
-   var testV = 1;
-   var pass1 = prompt('Please Enter Your Password','');
-   while (testV < 3) {
-   if (!pass1)
-   history.go(-1);
-   if (pass1.toLowerCase() == "dingus") {
-   window.open('blog.html');
-   break;
-   }
-   testV+=1;
-   var pass1 =
-   prompt('Access Denied - Password Incorrect, Please Try Again.','');
-   }
-   if (pass1.toLowerCase()!="password" & testV ==3)
-   history.go(-1);
-   return " ";
-   }
-   </SCRIPT>
-   <CENTER>
-   <FORM>
-   <input type="button" value="Enter Protected Page" onClick="passWord()">
-   </FORM>
-   </CENTER>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>A static website</title>
+
+  <!-- include the widget -->
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+</head>
+<body>
+  <!-- Add a menu:
+   Log in / Sign up - when the user is not logged in
+   Username / Log out - when the user is logged in
+  -->
+  <div data-netlify-identity-menu></div>
+
+  <!-- Add a simpler button:
+    Simple button that will open the modal.
+  -->
+  <div data-netlify-identity-button>Login with Netlify Identity</div>
+</body>
+</html>
