--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>A static website</title>
+  <title>A static website</title> netlifyIdentity.on('login', user => {
+  window.location.href = '/blog.html'; // replace with your page URL
+});
 
   <!-- include the widget -->
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
