--- a/blog.html
+++ b/blog.html
@@ -67,8 +67,9 @@
 
     <section>
         <article>
-            <h2>Good morning,</h2>
-            <p>Here is the content of the blog post. It can be as long as you want.</p>
+            <h2>Good morning,A round up for the week.</h2>
+            <p> No school monday,new gym teacher on wednesday. Gabes now has google chats.
+            and more to come. Stay tuned for more news coming to this site.</p>
         </article>
 
         <article>
