--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 <head>
   <title>A static website</title> netlifyIdentity.init();
 
-
+<button onclick="netlifyIdentity.open()" style="
+    display: inline-block;
+    background-color: #f8f9fa;
+    color: #212529;
+    text-align: center;
+    padding: 10px 20px;
+    border-radius: 5px;
+    text-decoration: none;
+">Login</button
 
   <!-- include the widget -->
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
