--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <button onclick="netlifyIdentity.open()" style="
     display: inline-block;
-    background-color: #f8f9fa;
+    background-color: #008000;
     color: #212529;
     text-align: center;
     padding: 10px 20px;
