--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>A static website</title> netlifyIdentity.init();
+  <title>Login</title> <!-- netlifyIdentity.init();-->
 
 <button onclick="netlifyIdentity.open()" style="
     display: inline-block;
@@ -21,7 +21,7 @@
    Log in / Sign up - when the user is not logged in
    Username / Log out - when the user is logged in
   -->
-  <div data-netlify-identity-menu></div>
+  
 
   <!-- Add a simpler button:
     Simple button that will open the modal.
