--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Login</title> <!-- netlifyIdentity.init();-->
+<link rel="shortcut icon" href="IMG_0432.png" type="image/x-icon">
 
 <button onclick="netlifyIdentity.open()" style="
     display: inline-block;
